Translated all text to Croatian, as some was left in English. Fixed the phone number being wrapped on mobile devices. Removed the header for static contact info. Removed italic styling from text headers. Rewrote the About section.

--- a/src/styles/home-contact.module.css
+++ b/src/styles/home-contact.module.css
@@ -41,13 +41,6 @@
   padding: 0 3vw;
 }
 
-#contact #staticInfo h2 {
-  font-family: var(--header-font);
-  font-size: 36px;
-  font-style: italic;
-  text-transform: lowercase;
-}
-
 #contact #staticInfo h3 {
   color: var(--text-secondary);
   font-family: var(--text-font);
@@ -81,12 +74,8 @@
     margin: 2vh 0;
   }
 
-  #contact #staticInfo h2 {
-    font-family: var(--text-font);
-    font-size: 36px;
-  }
-
   #contact #staticInfo h3 {
+    width: 100%;
     color: var(--text-secondary);
     font-family: var(--text-font);
     font-size: 20px;
@@ -94,6 +83,7 @@
   }
 
   #contact #staticInfo a {
+    width: 100%;
     font-family: var(--text-font);
     font-size: 18px;
     font-weight: 400;
