--- a/src/styles/text-container.module.css
+++ b/src/styles/text-container.module.css
@@ -3,7 +3,6 @@
   margin: 1vh 0;
   font-family: var(--header-font);
   font-size: 46px;
-  font-style: italic;
   font-weight: 700;
   text-transform: lowercase;
 }
